Updated lesson3_ex1  notebook

--- a/0-Data-Modeling/Exercises/Lesson3_Exercise1_Three_Queries_Three_Tables.ipynb
+++ b/0-Data-Modeling/Exercises/Lesson3_Exercise1_Three_Queries_Three_Tables.ipynb
@@ -56,15 +56,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Unable to connect to any servers', {'127.0.0.1:9042': ConnectionRefusedError(61, \"Tried connecting to [('127.0.0.1', 9042)]. Last error: Connection refused\")})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cassandra.cluster import Cluster\n",
     "try: \n",
@@ -85,15 +77,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 'session' is not defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    session.execute(\"\"\"\n",
@@ -117,15 +101,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 'session' is not defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    session.set_keyspace('udacity')\n",
@@ -169,17 +145,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"CREATE TABLE IF NOT EXISTS music_library\"\n",
     "query = query + \"(year INT, artist_name VARCHAR, album_name VARCHAR, PRIMARY KEY(year, artist_name))\"\n",
@@ -214,29 +180,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n",
-      "name 'session' is not defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"INSERT INTO music_library (year, artist_name, album_name)\"\n",
     "query = query + \" VALUES (%s, %s, %s)\"\n",
@@ -346,18 +290,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name 'session' is not defined\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'rows' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-1f9f4980d6b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0martist_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malbum_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rows' is not defined"
+      "1970 The Beatles Let it Be\n",
+      "1970 The Carpenters Close To You\n"
      ]
     }
    ],
@@ -390,9 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Beatles Rubber Soul 1965\n",
+      "The Beatles Let it Be 1970\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"select * from artist_library WHERE artist_name='The Beatles'\"\n",
     "try:\n",
@@ -422,9 +365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Carpenters 1970 Close To You\n"
+     ]
+    }
+   ],
    "source": [
     "query = \"select * from album_library WHERE album_name='Close To You'\"\n",
     "try:\n",
@@ -453,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
