created module for queries and etl

--- a/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/Project_1B_ Project_Template.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/Project_1B_ Project_Template.ipynb
@@ -2,27 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "# Part I. ETL Pipeline for Pre-Processing the Files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Import Python packages "
    ]
@@ -30,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import Python packages \n",
@@ -47,123 +25,73 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Creating list of filepaths to process original event csv data files"
+    "from etl import preprocess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/workspace\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'session_item_create' from 'sql_queries' (/Users/keneudeh/Documents/Projects/udacity-data-engineer-nanodegree/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/sql_queries.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-39db187236f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import Queries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msql_queries\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msession_item_create\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser_session_create\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msong_user_create\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msql_queries\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrop_table_queries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'session_item_create' from 'sql_queries' (/Users/keneudeh/Documents/Projects/udacity-data-engineer-nanodegree/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/sql_queries.py)"
      ]
     }
    ],
    "source": [
-    "# checking your current working directory\n",
-    "print(os.getcwd())\n",
-    "\n",
-    "# Get your current folder and subfolder event data\n",
-    "filepath = os.getcwd() + '/event_data'\n",
-    "\n",
-    "# Create a for loop to create a list of files and collect each filepath\n",
-    "for root, dirs, files in os.walk(filepath):\n",
-    "    \n",
-    "# join the file path and roots with the subdirectories using glob\n",
-    "    file_path_list = glob.glob(os.path.join(root,'*'))\n",
-    "    #print(file_path_list)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Processing the files to create the data file csv that will be used for Apache Casssandra tables"
+    "# Import Queries\n",
+    "from sql_queries import session_item_create, user_session_create, song_user_create\n",
+    "from sql_queries import drop_table_queries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# initiating an empty list of rows that will be generated from each file\n",
-    "full_data_rows_list = [] \n",
-    "    \n",
-    "# for every filepath in the file path list \n",
-    "for f in file_path_list:\n",
-    "\n",
-    "# reading csv file \n",
-    "    with open(f, 'r', encoding = 'utf8', newline='') as csvfile: \n",
-    "        # creating a csv reader object \n",
-    "        csvreader = csv.reader(csvfile) \n",
-    "        next(csvreader)\n",
-    "        \n",
-    " # extracting each data row one by one and append it        \n",
-    "        for line in csvreader:\n",
-    "            #print(line)\n",
-    "            full_data_rows_list.append(line) \n",
-    "            \n",
-    "# uncomment the code below if you would like to get total number of rows \n",
-    "#print(len(full_data_rows_list))\n",
-    "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
-    "#print(full_data_rows_list)\n",
-    "\n",
-    "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
-    "# Apache Cassandra tables\n",
-    "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
-    "\n",
-    "with open('event_datafile_new.csv', 'w', encoding = 'utf8', newline='') as f:\n",
-    "    writer = csv.writer(f, dialect='myDialect')\n",
-    "    writer.writerow(['artist','firstName','gender','itemInSession','lastName','length',\\\n",
-    "                'level','location','sessionId','song','userId'])\n",
-    "    for row in full_data_rows_list:\n",
-    "        if (row[0] == ''):\n",
-    "            continue\n",
-    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7], row[8], row[12], row[13], row[16]))\n"
+    "from utils import execute_query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run ETL Pipeline for Pre-Processing the Files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6821\n"
+      "/Users/keneudeh/Documents/Projects/udacity-data-engineer-nanodegree/0-Data-Modeling/Projects/sparkify-data-etl-cassandra\n"
      ]
     }
    ],
    "source": [
-    "# check the number of rows in your csv file\n",
-    "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
-    "    print(sum(1 for line in f))"
+    "preprocess()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
     "\n",
@@ -187,28 +115,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Begin writing your Apache Cassandra code in the cells below"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Creating a Cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This should make a connection to a Cassandra instance your local machine \n",
@@ -226,19 +148,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Create Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create Keyspace\n",
@@ -254,19 +172,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Set Keyspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set Keyspace\n",
@@ -278,56 +192,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Create queries to ask the following three questions of the data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "session_item_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS session_item\n",
-    "(session_id INT, session_item_id INT, artist_name VARCHAR, song_title VARCHAR, song_length DOUBLE,\n",
-    "PRIMARY KEY (session_id, session_item_id))\n",
-    "\"\"\"\n",
-    "try:\n",
-    "    session.execute(session_item_query)\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "execute_query(session_item_create)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
@@ -347,18 +243,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -385,38 +278,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "user_session_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS user_session\n",
-    "(user_id INT, session_id INT, session_item_id INT, artist_name VARCHAR, first_name VARCHAR, last_name VARCHAR, song_title VARCHAR,\n",
-    "PRIMARY KEY (user_id, session_id, session_item_id))\n",
-    "\"\"\"\n",
-    "try:\n",
-    "    session.execute(user_session_query)\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "execute_query(user_session_create)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "file = 'event_datafile_new.csv'\n",
@@ -434,18 +313,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -476,38 +352,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "song_user_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS song_user\n",
-    "(song_title VARCHAR, first_name VARCHAR, last_name VARCHAR,\n",
-    "PRIMARY KEY (song_title))\n",
-    "\"\"\"\n",
-    "try:\n",
-    "    session.execute(song_user_query)\n",
-    "except Exception as e:\n",
-    "    print(e)                  "
+    "execute_query(song_user_create)            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
@@ -527,18 +389,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -546,7 +405,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| All Hands Against His Own | Sara | Johnson |\n"
+      "<class 'cassandra.cluster.ResultSet'>\n",
+      "| All Hands Against His Own | Jacqueline | Lynch |\n"
      ]
     }
    ],
@@ -558,6 +418,8 @@
     "    \"\"\")\n",
     "except Exception as e:\n",
     "    print(e)\n",
+    "\n",
+    "print(type(results))\n",
     " \n",
     "for row in results:\n",
     "    print('| {} | {} | {} |'.format(row.song_title, row.first_name, row.last_name))"
@@ -565,73 +427,44 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Drop the tables before closing out the sessions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# DROP session_item table\n",
-    "try:\n",
-    "    session.execute(\"\"\"DROP TABLE IF EXISTS session_item\"\"\")\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# DROP user_session table\n",
-    "try:\n",
-    "    session.execute(\"\"\"DROP TABLE IF EXISTS user_session\"\"\")\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'drop_collection' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-126486854f14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mquery\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdrop_table_queries\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mdrop_collection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'drop_collection' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# DROP s_item table\n",
-    "try:\n",
-    "    session.execute(\"\"\"DROP TABLE IF EXISTS song_user\"\"\")\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "for query in drop_table_queries:\n",
+    "    drop_collection(session, query)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Close the session and cluster connection¶"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "editable": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "session.shutdown()\n",
@@ -641,18 +474,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -673,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
