moved db setup into a function

--- a/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/main.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/main.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import execute_query, insert_from_df, result_as_df"
+    "from utils import create_cluster_keyspace, execute_query, insert_from_df, result_as_df"
    ]
   },
   {
@@ -221,73 +221,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create a Cluster"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This should make a connection to a Cassandra instance your local machine \n",
-    "from cassandra.cluster import Cluster\n",
-    "\n",
-    "try:\n",
-    "    \n",
-    "    cluster = Cluster(['127.0.0.1'])\n",
-    "    # To establish connection and begin executing queries, need a session\n",
-    "    session = cluster.connect()\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create Keyspace"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create Keyspace\n",
-    "try:\n",
-    "    session.execute(\"\"\"\n",
-    "    CREATE KEYSPACE IF NOT EXISTS sparkifydb\n",
-    "    WITH REPLICATION = \n",
-    "    { 'class': 'SimpleStrategy', 'replication_factor': 1 }\n",
-    "    \"\"\")\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Set Keyspace"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set Keyspace\n",
-    "try:\n",
-    "    session.set_keyspace('sparkifydb')\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "cluster, session = create_cluster_keyspace()"
    ]
   },
   {
