updated select statements

--- a/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/main.ipynb
+++ b/0-Data-Modeling/Projects/sparkify-data-etl-cassandra/main.ipynb
@@ -34,10 +34,10 @@
    "outputs": [],
    "source": [
     "# Import Queries\n",
-    "from sql_queries import session_item_create, user_session_create, song_user_create\n",
-    "from sql_queries import session_item_insert, user_session_insert, song_user_insert\n",
-    "from sql_queries import session_item_select, user_session_select, song_user_select\n",
-    "from sql_queries import drop_table_queries"
+    "from nosql_queries import session_item_create, user_session_create, song_user_create\n",
+    "from nosql_queries import session_item_insert, user_session_insert, song_user_insert\n",
+    "from nosql_queries import session_item_select, user_session_select, song_user_select\n",
+    "from nosql_queries import drop_table_queries"
    ]
   },
   {
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x113fd8fd0>"
+       "<cassandra.cluster.ResultSet at 0x11ca929d0>"
       ]
      },
      "execution_count": 7,
@@ -267,9 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# INSERT values into collection\n",
@@ -304,8 +302,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>session_id</th>\n",
-       "      <th>session_item_id</th>\n",
        "      <th>artist_name</th>\n",
        "      <th>song_title</th>\n",
        "      <th>song_length</th>\n",
@@ -314,22 +310,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>338</td>\n",
-       "      <td>4</td>\n",
        "      <td>Faithless</td>\n",
-       "      <td>495.3073</td>\n",
        "      <td>Music Matters (Mark Knight Dub)</td>\n",
+       "      <td>495.3073</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   session_id  session_item_id artist_name  song_title  \\\n",
-       "0         338                4   Faithless    495.3073   \n",
-       "\n",
-       "                       song_length  \n",
-       "0  Music Matters (Mark Knight Dub)  "
+       "  artist_name                       song_title  song_length\n",
+       "0   Faithless  Music Matters (Mark Knight Dub)     495.3073"
       ]
      },
      "execution_count": 9,
@@ -340,7 +331,7 @@
    "source": [
     "# SELECT to verify that the data have been inserted into table\n",
     "res = execute_query(session, session_item_select)\n",
-    "result_as_df(res, columns=['session_id', 'session_item_id', 'artist_name', 'song_title', 'song_length'])"
+    "result_as_df(res, columns=['artist_name', 'song_title', 'song_length'])"
    ]
   },
   {
@@ -358,7 +349,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x113fd8b90>"
+       "<cassandra.cluster.ResultSet at 0x119f976d0>"
       ]
      },
      "execution_count": 10,
@@ -416,72 +407,57 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>session_id</th>\n",
-       "      <th>session_item_id</th>\n",
        "      <th>artist_name</th>\n",
+       "      <th>song_title</th>\n",
        "      <th>first_name</th>\n",
        "      <th>last_name</th>\n",
-       "      <th>song_title</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>182</td>\n",
-       "      <td>0</td>\n",
        "      <td>Down To The Bone</td>\n",
+       "      <td>Keep On Keepin' On</td>\n",
        "      <td>Sylvie</td>\n",
        "      <td>Cruz</td>\n",
-       "      <td>Keep On Keepin' On</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>182</td>\n",
-       "      <td>1</td>\n",
        "      <td>Three Drives</td>\n",
+       "      <td>Greece 2000</td>\n",
        "      <td>Sylvie</td>\n",
        "      <td>Cruz</td>\n",
-       "      <td>Greece 2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>182</td>\n",
-       "      <td>2</td>\n",
        "      <td>Sebastien Tellier</td>\n",
+       "      <td>Kilometer</td>\n",
        "      <td>Sylvie</td>\n",
        "      <td>Cruz</td>\n",
-       "      <td>Kilometer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>182</td>\n",
-       "      <td>3</td>\n",
        "      <td>Lonnie Gordon</td>\n",
+       "      <td>Catch You Baby (Steve Pitron &amp; Max Sanna Radio...</td>\n",
        "      <td>Sylvie</td>\n",
        "      <td>Cruz</td>\n",
-       "      <td>Catch You Baby (Steve Pitron &amp; Max Sanna Radio...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   user_id  session_id  session_item_id        artist_name first_name  \\\n",
-       "0       10         182                0   Down To The Bone     Sylvie   \n",
-       "1       10         182                1       Three Drives     Sylvie   \n",
-       "2       10         182                2  Sebastien Tellier     Sylvie   \n",
-       "3       10         182                3      Lonnie Gordon     Sylvie   \n",
+       "         artist_name                                         song_title  \\\n",
+       "0   Down To The Bone                                 Keep On Keepin' On   \n",
+       "1       Three Drives                                        Greece 2000   \n",
+       "2  Sebastien Tellier                                          Kilometer   \n",
+       "3      Lonnie Gordon  Catch You Baby (Steve Pitron & Max Sanna Radio...   \n",
        "\n",
-       "  last_name                                         song_title  \n",
-       "0      Cruz                                 Keep On Keepin' On  \n",
-       "1      Cruz                                        Greece 2000  \n",
-       "2      Cruz                                          Kilometer  \n",
-       "3      Cruz  Catch You Baby (Steve Pitron & Max Sanna Radio...  "
+       "  first_name last_name  \n",
+       "0     Sylvie      Cruz  \n",
+       "1     Sylvie      Cruz  \n",
+       "2     Sylvie      Cruz  \n",
+       "3     Sylvie      Cruz  "
       ]
      },
      "execution_count": 12,
@@ -492,8 +468,7 @@
    "source": [
     "# SELECT to verify that the data have been inserted into table\n",
     "res = execute_query(session, user_session_select)\n",
-    "result_as_df(res, columns=['user_id', 'session_id', 'session_item_id', 'artist_name', 'first_name', \n",
-    "                           'last_name', 'song_title'])\n"
+    "result_as_df(res, columns=['artist_name', 'song_title', 'first_name', 'last_name'])\n"
    ]
   },
   {
@@ -511,7 +486,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x113fc1c10>"
+       "<cassandra.cluster.ResultSet at 0x11bbb4650>"
       ]
      },
      "execution_count": 13,
@@ -531,7 +506,7 @@
    "outputs": [],
    "source": [
     "# INSERT values into collection\n",
-    "insert_from_df(session, df, ['song', 'firstName', 'lastName'], song_user_insert)"
+    "insert_from_df(session, df, ['song', 'userId', 'firstName', 'lastName'], song_user_insert)"
    ]
   },
   {
@@ -581,13 +556,27 @@
        "      <td>Jacqueline</td>\n",
        "      <td>Lynch</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>All Hands Against His Own</td>\n",
+       "      <td>Tegan</td>\n",
+       "      <td>Levine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>All Hands Against His Own</td>\n",
+       "      <td>Sara</td>\n",
+       "      <td>Johnson</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                  song_title  first_name last_name\n",
-       "0  All Hands Against His Own  Jacqueline     Lynch"
+       "0  All Hands Against His Own  Jacqueline     Lynch\n",
+       "1  All Hands Against His Own       Tegan    Levine\n",
+       "2  All Hands Against His Own        Sara   Johnson"
       ]
      },
      "execution_count": 15,
